# ZMCompiler

./: CMakeLists.txt
include/front_end/: Keywords.h  Parser.h  Scanner.h  SyntaxTree.h  ThreeAdress.h  state.h
include/tools/: Hash.h  PrintInfo.h
output/: main.ir
source/: main.zm
src/front_end/: Keywords.c  Parser.c  Scanner.c  SyntaxTree.c  ThreeAdress.c
src/tools/: Hash.c
test/: HashTest.c  IRTest.c  SyntaxTreeTest.c
